Changelog
=========

Version 1.87
	Small fixes in layout commit dialog
	Only close commit dialog when no modified files are left
	
Version 1.86
	Changed the layout of the commit dialog
	Added support for Cygwin
	Added cleanup function

Version 1.85
	Added context menu options to manipulate Diff viewer.
	Fixed alt-c as shortcut to commit.
	Added cherry pick commit to context menu of revision grid
	Added 'treat file as text' option to diff viewer
	
Version 1.84
	Added support for Visual Studio 2010 (beta)
	Fixed 'Add to .gitignore' function in commit dialog.

Version 1.83
	Added "Merge with branch" context menu item to the revision grid
	Added Ctrl+M as a shortcut key for Merge
	Added Ctrl+. as a shortcut key for Checkout Branch

Version 1.82
	Added 'Add to .gitignore' button in context menu in commit dialog
	When no commit message is entered and 'Amend to last commit' is pressed, the last commit message will be entered as commit message.
	A menu is added to the 'Commit message' label.
	Menu's under labels in the commit dialog are indicated by a icon
	'Show ignored files' option added to the 'Working dir changes' menu in the commit dialog
	
Version 1.81
	Fixed bug in file history
	Scroll position in blame view will be saved when selecting other revision
	Follow renames in file history is now optional.

Version 1.80
	File history follows file renames
	Added paragraph about ssh to User Manual
	Added force option to add files dialog

Version 1.79
	Added push force support for branch pushing
	Added push force support for tag pushing
	Added appearance tab to settings dialog.
	Added alt-c, alt-a and alt-r as keys for commit, amend and rescan.
	Added checkbox "close dialog after commit" on commit dialog
	Removed Load button from view patch dialog. Patch is now loaded when file is selected.
	Added context menu to merge conflict dialog
	Added "Abort" button to merge conflict dialog
	Most dialogs changed to support larger DPI settings.