@@ -4,6 +4,7 @@ Changelog
 Version 1.87
 	Small fixes in layout commit dialog
 	Only close commit dialog when no modified files are left
+	Added 'Open' and 'Open With' to context menu of commit dialog
 	
 Version 1.86
 	Changed the layout of the commit dialog
